--- a/reactRedux/src/index.css
+++ b/reactRedux/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.todo-list {
+  margin: 20px 0;
+}
+
+.todo-item {
+  margin: 5px 0;
+  padding: 10px;
+  border: 1px solid #000;
+  background: #ccc;
+}
